--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,17 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12099.778889433941!2d-73.99210454057796!3d40.69721505433017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a47df06b185%3A0xc889234bc07c42ee!2sBrooklyn+Heights%2C+Brooklyn%2C+NY+11201!5e0!3m2!1sen!2sus!4v1449304735988" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 
     <!-- contact form -->
-    
+    <form action="#" method="post">
+        <label for="fullname">Name</label>
+        <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" placeholder="your email" required>
+        <label for="phone">Phone</label>
+        <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+        <label for="message">Message</label>
+        <textarea name="message" id="message" rows="10"></textarea>
+        <input type="submit" value="send">
+    </form>
 
 </body>
 </html>
